<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    
    android:background="@drawable/background_bluegradient" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="10dip" >

        <EditText
            android:id="@+id/usernameEText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:cursorVisible="true"
            android:hint="@string/user_name"
            android:inputType="text"
            android:lines="1"
            android:textCursorDrawable="@null"
            android:textColor="#eec900" >

            <requestFocus>
            </requestFocus>
        </EditText>

        <EditText
            android:id="@+id/passwordEdTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:cursorVisible="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:textCursorDrawable="@null"
            android:textColor="#eec900" >
        </EditText>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="#eec900" >
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_layout"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/seal" />
    </LinearLayout>

</RelativeLayout>
